Update generateData.sql, init.sql, and 32 more files...
